testsuite/tests/rename/should_fail/T14548.stderr

T14548.hs:8:27: error: [GHC-76037] Not in scope: type variable ‘k’

T14548.hs:9:13: error: [GHC-76037] Not in scope: type variable ‘k’

T14548.hs:12:19: error: [GHC-76037] Not in scope: type variable ‘k’

T14548.hs:12:34: error: [GHC-76037] Not in scope: type variable ‘k’

T14548.hs:13:13: error: [GHC-76037] Not in scope: type variable ‘k’
